package AccountingForNursery.units;

import java.util.ArrayList;

public class Horse extends PackAnimals{
    public Horse(String name, String command, int age) {
        super(name, command, age, "Horse");
    }
}
