package AccountingForNursery.units;

import java.util.ArrayList;

public interface Interface {
    double getAge();

    String getName();

    String getCommand();
}
